src/App.css
@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body{
  background: linear-gradient(135deg, #FFE6E6, #E6F7FF);
}

@media  screen and (max-width: 768px) {
  *{
    scrollbar-width: none;
    -ms-overflow-style: none;  /* Internet Explorer and Edge */

    &::-webkit-scrollbar {
      display: none;  /* Safari and Chrome */
    }
  }
}

